<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">Tinker</string>
    <string name="app_id">1517511555132045</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Welcome to Tinker! Click the Log In button below to sign on using your Facebook profile.</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="logo">logodesc</string>
    <string name="about_me">About Me</string>
    <string name="interests">Interests</string>
    <string name="books">Books</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="television">Television</string>
    <string name="abouthint">Tell us about yourself.</string>
    <string name="readhint">What do you read?</string>
    <string name="listenhint">What do you listen to?</string>
    <string name="watchhint">What do you watch?</string>
    <string name="hodorhint">Hodor?</string>
    <string name="save">Save</string>
    <string name="when_are_you_">Where are you?</string>
    <string name="male_or_female_">Male or female?</string>
    <string name="when_were_you_born_">When were you born?</string>
    <string name="seeing_anyone_">Seeing anyone?</string>
    <string name="message_elipses">Message...</string>
   	<string name="tutorial_title">Let\'s get started!</string>
   	<string name="tutorial_message">If you find somebody interesting, swipe right. If you stumble upon somebody boring, swipe left. Simple enough.</string>
   	<string name="tutorial_dismiss">Got it!</string>
</resources>
