<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <com.facebook.widget.ProfilePictureView
                android:id="@+id/userProfilePicture"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                facebook:preset_size="small" />
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:textColor="#333"
                android:textSize="18sp" />
    </LinearLayout>
        
    <TableLayout
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:shrinkColumns="1"
            android:gravity="center_horizontal"
            android:background="@drawable/table_round_shape">
        <TableRow android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/location" />
            <EditText
                android:id="@+id/userLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:inputType="text"
                android:textColor="#333"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#999" />
        </TableRow>
        <TableRow android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/gender" />
            <EditText
                android:id="@+id/userGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:inputType="text"
                android:textColor="#333"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#999" />
        </TableRow>
        <TableRow android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/date_of_birth" />
            <EditText
                android:id="@+id/userDateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:inputType="date"
                android:textColor="#333"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#999" />
        </TableRow>
        <TableRow android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/relationship" />
            <EditText
                android:id="@+id/userRelationship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:inputType="text"
                android:textColor="#333"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#999" />
        </TableRow>
        <TableRow android:minHeight="70dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/about_me" />
            <EditText
                android:id="@+id/userDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:inputType="textMultiLine"
                android:hint="@string/abouthint"
                android:textColor="#333"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#999" />
        </TableRow>
        <TableRow android:minHeight="70dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/books" />
            <EditText
                android:id="@+id/userBooks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:inputType="textMultiLine"
                android:hint="@string/readhint"
                android:textColor="#333"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#999" />
        </TableRow>
        <TableRow android:minHeight="70dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/music" />
            <EditText
                android:id="@+id/userMusic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#333"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:inputType="textMultiLine"
                android:hint="@string/listenhint"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#999" />
        </TableRow>
        <TableRow android:minHeight="70dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/movies" />
            <EditText
                android:id="@+id/userMovies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:inputType="textMultiLine"
                android:hint="@string/watchhint"
                android:textColor="#333"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <View
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#999" />
        </TableRow>
        <TableRow android:minHeight="70dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/television" />
            <EditText
                android:id="@+id/userTelevision"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:inputType="textMultiLine"
                android:hint="@string/hodorhint"
                android:textColor="#333"
                android:textSize="16sp" />
        </TableRow>
     </TableLayout>
    
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/save"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/scorp_button"
        />
    </LinearLayout>
</ScrollView>